force-app/main/default/objects/Custom_Quick_Link__mdt/Custom_Quick_Link__mdt.object-meta.xml
<CustomObject>
    <label>Custom Quick Link</label>
    <pluralLabel>Custom Quick Links</pluralLabel>
</CustomObject>