force-app/main/default/objects/Custom_Quick_Link__mdt/fields/Appearance_Order__c.field-meta.xml
<CustomField>
    <fullName>Appearance_Order__c</fullName>
    <label>Appearance Order</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>