force-app/main/default/objects/Custom_Quick_Link__mdt/fields/Custom_Quick_Link_Group__c.field-meta.xml
<CustomField>
    <fullName>Custom_Quick_Link_Group__c</fullName>
    <label>Custom Quick Link Group</label>
    <referenceTo>Custom_Quick_Link_Group__mdt</referenceTo>
    <relationshipLabel>Custom Quick Links</relationshipLabel>
    <relationshipName>Custom_Quick_Links</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>