force-app/main/default/objects/Custom_Quick_Link__mdt/fields/Display_Record_Count__c.field-meta.xml
<CustomField>
    <fullName>Display_Record_Count__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if &quot;Type&quot; is &quot;Dynamic Single Related List&quot; or &quot;Single Related List&quot; and a record count (0-10+) needs to be displayed alongside the link title. The &quot;Record Count SOQL&quot; field should also be completed to provide a SOQL query that matches the related list parameters.</description>
    <inlineHelpText>Checked if &quot;Type&quot; is &quot;Dynamic Single Related List&quot; or &quot;Single Related List&quot; and a record count (0-10+) needs to be displayed alongside the link title. The &quot;Record Count SOQL&quot; field should also be completed to provide a SOQL query that matches the related list parameters.</inlineHelpText>
    <label>Display Record Count</label>
    <type>Checkbox</type>
</CustomField>