force-app/main/default/objects/Custom_Quick_Link__mdt/fields/Icon__c.field-meta.xml
<CustomField>
    <fullName>Icon__c</fullName>
    <label>Icon</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>