force-app/main/default/objects/Custom_Quick_Link__mdt/fields/List_Name__c.field-meta.xml
<CustomField>
    <fullName>List_Name__c</fullName>
    <description>If &quot;Type&quot; is &quot;Dynamic Single Related List&quot;, provide the &quot;cmpId&quot; of the dynamic related list obtained from the list URL (i.e. lst_dynamicRelatedList2, if this was the second dynamic related list that was placed on a flexipage).

If &quot;Type&quot; is &quot;Single Related List&quot;, provide the related list name of the single related list obtained from the list URL (i.e. TLS_Information__r).</description>
    <inlineHelpText>If &quot;Type&quot; is &quot;Dynamic Single Related List&quot;, provide the &quot;cmpId&quot; of the dynamic related list obtained from the list URL (i.e. lst_dynamicRelatedList2, if this was the second dynamic related list that was placed on a flexipage).

If &quot;Type&quot; is &quot;Single Related List&quot;, provide the related list name of the single related list obtained from the list URL (i.e. TLS_Information__r).</inlineHelpText>
    <label>List Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>