force-app/main/default/objects/Custom_Quick_Link__mdt/fields/Record_Count_SOQL__c.field-meta.xml
<CustomField>
    <fullName>Record_Count_SOQL__c</fullName>
    <description>If &quot;Type&quot; is &quot;Dynamic Single Related List&quot; or &quot;Single Related List&quot; and &quot;Display Record Count&quot; is checked, provide a SOQL query that matches the related list configuration, returns the same number of records as the related list, and includes merge fields in the proper syntax (i.e. SELECT Id FROM Case WHERE AccountId = &apos;[RECORD_ID]&apos;).

Supported merge fields are: [RECORD_ID].</description>
    <inlineHelpText>If &quot;Type&quot; is &quot;Dynamic Single Related List&quot; or &quot;Single Related List&quot; and &quot;Display Record Count&quot; is checked, provide a SOQL query that matches the related list configuration, returns the same number of records as the related list, and includes merge fields in the proper syntax (i.e. SELECT Id FROM Case WHERE AccountId = &apos;[RECORD_ID]&apos;).

Supported merge fields are: [RECORD_ID].</inlineHelpText>
    <label>Record Count SOQL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>