force-app/main/default/objects/Custom_Quick_Link__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Custom Tab (Page)</fullName>
            </value>
            <value>
                <fullName>Dynamic Single Related List</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
            <value>
                <fullName>Single Related List</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>